<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mic_recording"
            android:icon="@drawable/ic_mic_recording"
            android:title="@string/menu_recording" />

        <item
            android:id="@+id/nav_my_recordings"
            android:icon="@drawable/ic_my_recordings"
            android:title="@string/menu_my_recordings" />

        <item
            android:id="@+id/nav_audio_list"
            android:icon="@drawable/ic_audio_play_list"
            android:title="@string/menu_audio_files" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>